<?xml version="1.0"?>
<package format="3">
    <name>robotiq_ft_sensor_hardware</name>
    <version>2.0.0</version>
    <description>Package for reading data for a Robotiq Force Torque Sensor</description>
    <!-- robotiq -->
    <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
    <author email="jsavoie20@gmail.com">Jonathan Savoie</author>
    <url type="website">http://ros.org/wiki/robotiq</url>
    <!---->
    <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis Angelakis</maintainer>
    <author>Panagiotis Angelakis</author>
    <!-- license -->
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->
    <depend>rclcpp</depend>
    <depend>pluginlib</depend>
    <depend>hardware_interface</depend>
    <depend>robotiq_ft_sensor_interfaces</depend>
    <depend>geometry_msgs</depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
