<?xml version="1.0"?>
<package format="3">
    <name>robotiq_ft_sensor_interfaces</name>
    <version>2.0.0</version>
    <description>Interfaces Package for a Robotiq Force Torque Sensor</description>
    <!-- robotiq -->
    <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
    <author email="jsavoie20@gmail.com">Jonathan Savoie</author>
    <url type="website">http://ros.org/wiki/robotiq</url>
    <!---->
    <maintainer email="panagiotis.angelakis.robot@gmail.com">Panagiotis Angelakis</maintainer>
    <author>Panagiotis Angelakis</author>
    <!-- license -->
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>builtin_interfaces</depend>
    <depend>std_msgs</depend>
    <!-- <build_depend>rosidl_default_generators</build_depend> -->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
